--- a/Assets/css/Home.css
+++ b/Assets/css/Home.css
@@ -48,18 +48,6 @@ html {
   justify-content: space-between;
 }
 
-.lang {
-  font-size: 16px;
-  font-weight: 400;
-  font-family: "Figtree", sans-serif;
-}
-
-.lang span {
-  color: rgba(255, 255, 255, 0.5);
-}
-
-
-
 /* Drawer Styles */
 .drawer {
   position: fixed;
@@ -137,12 +125,7 @@ html {
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(
-    0,
-    0,
-    0,
-    0.5
-  ); /* Overlay color (semi-transparent black) */
+  background: rgba(0, 0, 0, 0.5); /* Overlay color (semi-transparent black) */
   z-index: 1; /* Ensure it appears above the background */
 }
 
@@ -219,17 +202,31 @@ html {
 }
 
 .play-pause {
-  width: 80px;
-  height: 80px;
+  width: 65px;
+  height: 65px;
   cursor: pointer;
+  object-fit: contain;
 }
 
 /* story section */
 .story-container {
-  background: url("/Assets/storybg.png") no-repeat;
-  background-size: contain; /* Ensure image fits the specified dimensions */
-  z-index: 0; /* Place behind the content */
+  position: relative; /* Ensure proper stacking for the overlay */
+  z-index: 10; /* Place behind the content */
 }
+
+.story-container::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: url("../storybg.png") no-repeat;
+  background-size: contain; /* Ensure image fits the specified dimensions */
+  opacity: 0.7; /* Adjust this value for the desired transparency */
+  z-index: -1; /* Ensure the overlay is behind the content */
+}
+
 .story {
   width: 50%;
   text-align: center;
@@ -293,9 +290,9 @@ html {
   right: 50px;
   width: 120px;
   height: 400px;
-  background: url("/Assets/packagrbg.png") no-repeat;
+  background: url("../packagrbg.png") no-repeat;
   background-size: contain; /* Ensure image fits the specified dimensions */
-  opacity: 0.3; /* Control transparency of the image */
+  opacity: 0.5; /* Control transparency of the image */
   z-index: 0; /* Place behind the content */
 }
 
@@ -327,22 +324,14 @@ html {
   margin-block: 50px;
 }
 
-.image-container {
-  display: flex;
-  gap: 16px;
-  height: 400px;
-  width: 100%;
-  max-width: 1200px;
-}
-
-.image-item {
+.package-image-item {
   flex: 1;
   position: relative;
   overflow: hidden;
   transition: flex 0.5s ease, transform 0.3s ease; /* Smooth transition for flex and any transform */
 }
 
-.image-item img {
+.package-image-item img {
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -377,7 +366,7 @@ html {
 }
 
 /* Hover effect on the image-item */
-.image-item:hover .overlay-text img {
+.package-image-item:hover .overlay-text img {
   opacity: 1; /* Show image when parent .image-item is hovered */
 }
 
@@ -409,19 +398,23 @@ html {
   opacity: 0;
 }
 
-.image-item:hover .overlay-text .overlay-desc p:nth-of-type(2) {
+.package-image-item:hover .overlay-text .overlay-desc p:nth-of-type(2) {
   opacity: 1; /* Show image when parent .image-item is hovered */
 }
 
-.image-item:hover {
+.package-image-item:hover {
   flex: 2;
 }
 
-.image-item:not(:hover) {
+.package-image-item:not(:hover) {
   flex: 1;
 }
 
 /* exp slider */
+
+.landing-Sliders a {
+  text-decoration: none;
+}
 
 .experience {
   position: relative;
@@ -439,9 +432,9 @@ html {
   left: 50px;
   width: 120px;
   height: 150px;
-  background: url("/Assets/expbg.png") no-repeat;
+  background: url("../expbg.png") no-repeat;
   background-size: contain; /* Ensure image fits the specified dimensions */
-  opacity: 0.3; /* Control transparency of the image */
+  opacity: 0.5; /* Control transparency of the image */
   z-index: 0; /* Place behind the content */
   transform: rotate(-30deg);
 }
@@ -478,13 +471,22 @@ html {
 
 .card {
   background: none;
-
   overflow: hidden;
-  transition: transform 0.3s ease;
+  transition: transform 0.3s ease, background-color 0.3s ease,
+    box-shadow 0.3s ease; /* Smooth transition for all effects */
 }
+
 .card:hover {
-  background-color: rgba(246, 244, 236, 1);
+  background-color: rgba(
+    246,
+    244,
+    236,
+    1
+  ); /* Changes the background color on hover */
+  transform: scale(1.01); /* Slightly scales up the card */
+  box-shadow: 0px 0px 10px 10px rgba(116, 129, 179, 0.17); /* Adds a subtle shadow */
 }
+
 .card img {
   width: 100%;
   height: 300px;
@@ -558,17 +560,34 @@ html {
 
 /* status 1 */
 
-
 .sts1-container {
-  background: url("/Assets/status1bg.png") no-repeat;
-  background-position: center;
-  background-color: rgba(242, 238, 226, 0.9);
-  background-size: cover; /* Ensure image fits the specified dimensions */
+  position: relative; /* Ensure proper positioning for the overlay */
   width: 100%;
   height: 250px;
-  z-index: 0; /* Place behind the content */
   margin: 20px 0 50px 0px;
+  z-index: 0; /* Place behind the content */
+  background-color: rgba(
+    242,
+    238,
+    226,
+    0.9
+  ); /* Base background color with opacity */
+  overflow: hidden; /* Prevent pseudo-element overflow */
 }
+
+.sts1-container::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: url("../status1bg.png") no-repeat center;
+  background-size: cover; /* Ensure the image fits the specified dimensions */
+  opacity: 0.5; /* Adjust for the desired transparency */
+  z-index: -1; /* Ensure it's behind the content */
+}
+
 .status1 {
   width: 75%;
   margin-inline: auto;
@@ -630,9 +649,9 @@ html {
   left: 50px;
   width: 400px;
   height: 300px;
-  background: url("/Assets/discoverbg.png") no-repeat;
+  background: url("../discoverbg.png") no-repeat;
   background-size: contain; /* Ensure image fits the specified dimensions */
-  opacity: 1; /* Control transparency of the image */
+  opacity: 0.8; /* Control transparency of the image */
   z-index: 0; /* Place behind the content */
 }
 
@@ -666,34 +685,13 @@ html {
   font-weight: 500;
 }
 
-/* Base styles for the card container */
-.int-cards-container {
-  margin-top: 30px;
-  display: grid;
-  gap: 1rem; /* Space between grid items */
-  padding: 1rem;
-  grid-template-columns: repeat(1, 1fr); /* Default to 1 column */
-}
-
-/* Grid layout for tablets (768px and above) */
-@media (min-width: 768px) {
-  .int-cards-container {
-    grid-template-columns: repeat(3, 1fr); /* 3 columns */
-  }
-}
-
-/* Grid layout for desktops (1024px and above) */
-@media (min-width: 1024px) {
-  .int-cards-container {
-    grid-template-columns: repeat(3, 1fr); /* 3 columns */
-  }
-}
-
 /* Styling individual cards */
 .int-card {
   border-bottom: 1px solid rgba(0, 0, 0, 1); /* Light border */
+  position: relative;
+  display: inline-block;
+  overflow: hidden;
 
-  overflow: hidden; /* Crop overflowing content */
   text-align: center; /* Center content */
   padding-bottom: 15px;
 }
@@ -706,10 +704,50 @@ html {
   color: rgba(24, 24, 24, 1);
 }
 
+.int-img-wrapper {
+  position: relative;
+}
+
 .int-img {
-  height: 400px;
+  display: block;
   width: 100%;
+
+  height: 400px;
+
   object-fit: cover;
+}
+
+.int-overlay {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background: linear-gradient(to top, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
+
+  text-align: left;
+  padding: 20px 10px;
+}
+
+.int-overlay-text {
+  margin-bottom: 20px;
+  transition: opacity 0.3s ease;
+  font-size: 22px;
+  font-family: "Figtree", sans-serif;
+  font-weight: 500;
+  color: white;
+  opacity: 0;
+}
+
+.int-img-wrapper:hover .int-overlay-text {
+  opacity: 1;
+}
+
+.int-card a {
+  text-decoration: none;
+}
+.int-arrow {
+  display: flex;
+  justify-content: center;
 }
 
 /* tree monks */
@@ -730,9 +768,9 @@ html {
   right: 50px;
   width: 400px;
   height: 300px;
-  background: url("/Assets/monkbg.png") no-repeat;
+  background: url("../monkbg.png") no-repeat;
   background-size: contain; /* Ensure image fits the specified dimensions */
-  opacity: 1; /* Control transparency of the image */
+  opacity: 0.6; /* Control transparency of the image */
   z-index: 0; /* Place behind the content */
 }
 
@@ -744,23 +782,37 @@ html {
 .monk-content {
   width: 90%;
   margin-inline: auto;
-  margin-top: 50px;
+  margin-top: 0px;
   margin-bottom: 50px;
   text-align: center;
 }
 
 .monk-card {
-  background-color: rgba(248, 248, 248, 1);
-  background-image: url("/Assets/monkbg2.png");
-  background-repeat: no-repeat;
-  background-position: left;
-  background-size: 400px;
+  position: relative; /* Ensure proper positioning for the overlay */
+  background-color: rgba(248, 248, 248, 1); /* Base background color */
   border-radius: 20px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 30px 80px;
   margin-block: 50px;
+  overflow: hidden; /* Prevent pseudo-element overflow */
+}
+
+.monk-card::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url("../monkbg2.png");
+  background-repeat: no-repeat;
+  background-position: left;
+  background-size: 400px;
+  opacity: 0.5; /* Adjust for the desired transparency */
+  z-index: 0; /* Place it behind the content */
+  border-radius: 20px; /* Match the card's border radius */
 }
 
 .monk-card .card-left {
@@ -871,7 +923,7 @@ html {
   padding-top: 100px;
   margin-top: 20px;
   background-color: rgba(242, 238, 226, 0.9); /* Background color */
-  padding-bottom: 30px;
+
   box-sizing: border-box;
 }
 
@@ -882,15 +934,28 @@ html {
   left: 10px;
   width: 200px;
   height: 200px;
-  background: url("/Assets/effortbg1.png") no-repeat;
+  background: url("../effortbg1.png") no-repeat;
   background-size: cover; /* Ensure image fits the specified dimensions */
-  opacity: 1; /* Control transparency of the image */
+  opacity: 0.6; /* Control transparency of the image */
   z-index: 0; /* Place behind the content */
 }
 
 .effort-container > * {
   position: relative;
   z-index: 1; /* Ensure content is above the image */
+}
+
+.effort-content {
+  position: relative;
+}
+
+.effort-content .effortcontentbg-img {
+  position: absolute;
+  bottom: 0;
+  right: 5%;
+  width: 300px;
+  z-index: 1;
+  opacity: 0.7;
 }
 
 .effort-title {
@@ -926,8 +991,6 @@ html {
   gap: 30px;
   padding: 20px;
   position: relative;
-  margin-top: 50px;
-  margin-bottom: 100px;
 }
 
 .effort-card .effortcard-img {
@@ -944,15 +1007,6 @@ html {
   right: 0;
   width: 150px;
   height: 150px;
-}
-
-.effort-card .effortcardbg-img {
-  position: absolute;
-  bottom: -100px;
-  right: -120px;
-  width: 250px;
-  height: 250px;
-  z-index: 10;
 }
 
 .effort-card-content {
@@ -977,32 +1031,36 @@ html {
   font-weight: 500;
 }
 
-.effortgradient-overlay {
-  position: absolute;
-  bottom: -60px;
-  left: 0;
-  border-radius: 15px; /* Equivalent to rounded-xl */
-  pointer-events: none;
-  height: 40px;
-  width: 100%;
-
-  background: linear-gradient(to top, transparent, white, white);
-}
-
 /* sts2 */
-
-
 .sts2-container {
-  background: url("/Assets/stsbg2.png") no-repeat;
-  background-position: center;
-  background-color: rgba(242, 238, 226, 0.9);
-  background-size: contain; /* Ensure image fits the specified dimensions */
+  position: relative; /* Enable layering for the pseudo-element */
+  background-color: rgba(
+    242,
+    238,
+    226,
+    0.9
+  ); /* Base background color with transparency */
   width: 90%;
   margin-inline: auto;
   border-radius: 15px;
   height: 250px;
   z-index: 0; /* Place behind the content */
   margin-block: 70px;
+  overflow: hidden; /* Prevent pseudo-element overflow */
+}
+
+.sts2-container::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: url("../stsbg2.png") no-repeat center;
+  background-size: contain; /* Ensure the image fits the dimensions */
+  opacity: 0.8; /* Adjust for the desired transparency */
+  z-index: -1; /* Place the image behind the content */
+  border-radius: 15px; /* Match the container's border radius */
 }
 
 .sts2-content {
@@ -1043,6 +1101,10 @@ html {
   padding-bottom: 30px;
 }
 
+.blog-Sliders a {
+  text-decoration: none;
+}
+
 .blog-title {
   color: rgba(84, 48, 48, 1);
 
@@ -1054,15 +1116,14 @@ html {
 
 .blog-card {
   background: none;
-
   overflow: hidden;
-
   background-color: rgba(248, 248, 248, 1);
-  transition: box-shadow 0.3s ease;
+  transition: box-shadow 0.3s ease, transform 0.3s ease; /* Smooth transition for both shadow and scale */
 }
 
 .blog-card:hover {
-  box-shadow: 0 0 10px 5px rgba(116, 129, 179, 0.17); /* Add the semi-transparent glow effect */
+  box-shadow: 5px 5px 10px 10px rgba(116, 129, 179, 0.17); /* Add the semi-transparent glow effect */
+  transform: scale(1.01); /* Slightly enlarge the card on hover */
 }
 
 .blog-card img {
@@ -1111,11 +1172,8 @@ html {
 .sub {
   width: 100%;
   height: 400px;
-  background: linear-gradient(
-      rgba(23, 25, 31, 0.1),
-      rgba(23, 25, 31, 0.1)
-    ),
-    /* Overlay */ url("/Assets/subbg.png") no-repeat center/cover; /* Background image */
+  background: linear-gradient(rgba(23, 25, 31, 0.1), rgba(23, 25, 31, 0.1)),
+    /* Overlay */ url("../subbg.png") no-repeat center/cover; /* Background image */
   color: white; /* Adjust text color to contrast with overlay */
   display: flex;
   flex-direction: column;
@@ -1272,7 +1330,6 @@ html {
   color: rgba(23, 25, 31, 1);
 }
 
-
 /* Responsive Grid */
 @media (min-width: 768px) {
   .footer-content {
@@ -1326,7 +1383,7 @@ html {
   left: 0%;
   right: inherit;
   background-size: cover;
-  background-image: url("/Assets/expPrev.png");
+  background-image: url("../expPrev.png");
 }
 .landing-Sliders .slick-next {
   top: 40%;
@@ -1334,7 +1391,112 @@ html {
   right: -30px;
   left: inherit;
   background-size: cover;
-  background-image: url("/Assets/expNext.png");
+  background-image: url("../expNext.png");
+}
+
+/*international slider */
+
+.int-sliders {
+  padding: 50px 0;
+}
+
+.int-sliders .slick-slide {
+  margin: 0 6px;
+}
+.int-sliders .slick-list {
+  margin: 0 -6px;
+}
+.int-sliders .slick-arrow[aria-disabled="true"] {
+  opacity: 0.5;
+  cursor: not-allowed;
+}
+.int-sliders .slick-dots {
+  display: none !important;
+}
+.int-sliders .slick-arrow {
+  position: absolute;
+  content: "";
+  z-index: 9;
+  width: 30px;
+  height: 30px;
+  transform: translate(-50%, -50%);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  text-indent: -9999px;
+}
+.int-sliders .slick-arrow::before {
+  content: "";
+}
+.int-sliders .slick-prev {
+  top: 40%;
+  bottom: inherit;
+  left: 0%;
+  right: inherit;
+  background-size: cover;
+  background-image: url("../expPrev.png");
+}
+.int-sliders .slick-next {
+  top: 40%;
+  bottom: inherit;
+  right: -30px;
+  left: inherit;
+  background-size: cover;
+  background-image: url("../expNext.png");
+}
+
+/* sustainable effort slider */
+
+.effort-slider {
+  overflow: hidden;
+  padding: 50px 0 100px 0;
+}
+
+.effort-slider .slick-slide {
+  margin: 0 6px;
+}
+.effort-slider .slick-list {
+  margin: 0 -6px;
+}
+.effort-slider .slick-arrow[aria-disabled="true"] {
+  opacity: 0.5;
+  cursor: not-allowed;
+}
+.effort-slider .slick-dots {
+  display: none !important;
+}
+.effort-slider .slick-arrow {
+  position: absolute;
+  content: "";
+  z-index: 9;
+  width: 30px;
+  height: 30px;
+  transform: translate(-50%, -50%);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  text-indent: -9999px;
+}
+.effort-slider .slick-arrow::before {
+  content: "";
+}
+.effort-slider .slick-prev {
+  top: 40%;
+  bottom: inherit;
+  left: calc(100% - 130px);
+  right: inherit;
+  background-size: cover;
+  background-image: url("../expPrev.png");
+  transform: rotate(90deg);
+}
+.effort-slider .slick-next {
+  top: calc(40% -30px);
+  bottom: inherit;
+  right: 100px;
+  left: inherit;
+  background-size: cover;
+  background-image: url("../expNext.png");
+  transform: rotate(90deg);
 }
 
 /*blog slider */
@@ -1377,7 +1539,7 @@ html {
   left: 96%;
   right: inherit;
   background-size: cover;
-  background-image: url("/Assets/expPrev.png");
+  background-image: url("../expPrev.png");
 }
 .blog-Sliders .slick-next {
   top: -30px;
@@ -1385,8 +1547,9 @@ html {
   right: -15px;
   left: inherit;
   background-size: cover;
-  background-image: url("/Assets/expNext.png");
+  background-image: url("../expNext.png");
 }
+
 @media only screen and (max-width: 992px) {
   .blog-Sliders .slick-prev {
     left: 90%;
@@ -1404,4 +1567,3 @@ html {
     left: 85%;
   }
 }
- 
