tyndis v2 menu done and make it mobile resposive

--- a/Assets/css/Home.css
+++ b/Assets/css/Home.css
@@ -70,27 +70,27 @@ html {
 
 .drawer .header {
   padding: 20px;
-   
+
   color: white;
   text-align: center;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
- .header .menu-close{
+.header .menu-close {
   width: 30px;
   height: 30px;
   object-fit: cover;
   cursor: pointer;
- }
+}
 #close {
   cursor: pointer;
 }
 .drawer .footer {
   margin-top: auto;
   padding: 20px;
-   width: 70%;
-   margin-inline: auto;
+  width: 70%;
+  margin-inline: auto;
   color: white;
   text-align: center;
   border-top: 1px solid rgba(0, 0, 0, 0.15);
@@ -103,15 +103,15 @@ html {
 
 .content ul li {
   padding-block: 20px;
-  
+
   text-align: center;
 }
 .content ul li:not(:first-child) {
-   border-top: 1px solid rgba(0, 0, 0, 0.15) ;
-   border-top: 1px solid rgba(0, 0, 0, 0.15) ;
-   border-top: 1px solid rgba(0, 0, 0, 0.15) ;
-   border-top: 1px solid rgba(0, 0, 0, 0.15); 
-   border-top: 1px solid rgba(0, 0, 0, 0.15) ;
+  border-top: 1px solid rgba(0, 0, 0, 0.15);
+  border-top: 1px solid rgba(0, 0, 0, 0.15);
+  border-top: 1px solid rgba(0, 0, 0, 0.15);
+  border-top: 1px solid rgba(0, 0, 0, 0.15);
+  border-top: 1px solid rgba(0, 0, 0, 0.15);
 }
 
 .content ul li a {
@@ -121,8 +121,6 @@ html {
   font-size: 20px;
   font-weight: 500;
 }
-
- 
 
 .drawer .content {
   flex-grow: 1;
@@ -1543,10 +1541,10 @@ html {
 
 @media only screen and (max-width: 490px) {
   .effort-slider .slick-prev {
-   display: none !important;
+    display: none !important;
   }
   .effort-slider .slick-next {
-  display: none !important;
+    display: none !important;
   }
 }
 
@@ -1653,159 +1651,131 @@ html {
   }
 
   .experience {
-   padding-bottom: 0px;
-}
+    padding-bottom: 0px;
+  }
 
-.experience::before {
-  
-   
-  left: 10px;
-   
-}
+  .experience::before {
+    left: 10px;
+  }
   .exp-content {
-    
     margin-top: 80px;
-}
+  }
   .exp-sub-title {
-    
     font-size: 50px;
-    
-}
+  }
 
-.card{
-  border: 1px solid rgba(0, 0, 0, 0.15)
-}
-.sts1-container{
-  height: 400px;
-  padding-block: 20px;
-}
-.status1{
-  flex-direction: column;
-  justify-content: space-around;
-  align-items: center;
-}
-.int-content{
-  margin-bottom: 0px;
-  margin-top: 80px;
-}
-.int-package::before {
-   
-  left: 10px;
-  width: 250px;
-  height: 250px;
-   
-}
-.int-img{
-  height: 350px;
-}
-.int-sub-title {
-  
-  font-size: 50px;
-  
-}
+  .card {
+    border: 1px solid rgba(0, 0, 0, 0.15);
+  }
+  .sts1-container {
+    height: 400px;
+    padding-block: 20px;
+  }
+  .status1 {
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+  }
+  .int-content {
+    margin-bottom: 0px;
+    margin-top: 80px;
+  }
+  .int-package::before {
+    left: 10px;
+    width: 250px;
+    height: 250px;
+  }
+  .int-img {
+    height: 350px;
+  }
+  .int-sub-title {
+    font-size: 50px;
+  }
 
-.tree-monks  {
-   padding-bottom: 10px;
-  
-}
-.tree-monks::before {
-   
-  top: -150px;
-  right: 10px;
-  width: 250px;
-  height: 250px;
-  
-}
+  .tree-monks {
+    padding-bottom: 10px;
+  }
+  .tree-monks::before {
+    top: -150px;
+    right: 10px;
+    width: 250px;
+    height: 250px;
+  }
 
-.monk-card {
-   
-  padding: 30px 20px;
-  flex-direction: column;
-}
+  .monk-card {
+    padding: 30px 20px;
+    flex-direction: column;
+  }
 
-.monk-card .card-left {
-  text-align: center;
-}
+  .monk-card .card-left {
+    text-align: center;
+  }
 
-.gallery-container {
- margin-top: 50px;
-  width: 80vw;
-}
+  .gallery-container {
+    margin-top: 50px;
+    width: 80vw;
+  }
 
-.effort-container {
-   
-  padding-top: 50px;
-  
-}
+  .effort-container {
+    padding-top: 50px;
+  }
 
-.effort-title h3 {
-  
-  font-size: 50px;
-  
-}
+  .effort-title h3 {
+    font-size: 50px;
+  }
 
-.effort-title p {
- 
-  width: 80%;
-   
-}
+  .effort-title p {
+    width: 80%;
+  }
 
-.effort-card .effortgrid-img {
-  
-  z-index: -1;
-}
+  .effort-card .effortgrid-img {
+    z-index: -1;
+  }
 
-.effort-card {
-  width: 80%;
-   
-  flex-direction: column;
-}
+  .effort-card {
+    width: 80%;
 
-.effort-container::before {
-   
-  top: 50px;
-   
-}
+    flex-direction: column;
+  }
 
-.effort-para2{
-  display: none;
-}
+  .effort-container::before {
+    top: 50px;
+  }
 
-.effort-card .effortcard-img{
- height: 350px;
-}
+  .effort-para2 {
+    display: none;
+  }
 
-.sts2-container {
-   
-  height: 300px;
-   
-  padding-block: 30px;
-}
+  .effort-card .effortcard-img {
+    height: 350px;
+  }
 
-.sts2-content {
-  flex-direction: column;
-  gap: 10px;
- justify-content: space-around;
-}
+  .sts2-container {
+    height: 300px;
 
-.blog-title {
-   
-  font-size: 50px;
-   
-}
+    padding-block: 30px;
+  }
 
-.sub-content h4 {
-  font-size: 50px;
-  width: 90%;
-  margin-inline: auto;
-  
-}
-.sub{
-  height: 350px;
-}
-.sub-form {
-   
-  width: 90%;
-  margin-inline: auto;
-}
+  .sts2-content {
+    flex-direction: column;
+    gap: 10px;
+    justify-content: space-around;
+  }
+
+  .blog-title {
+    font-size: 50px;
+  }
+
+  .sub-content h4 {
+    font-size: 50px;
+    width: 90%;
+    margin-inline: auto;
+  }
+  .sub {
+    height: 350px;
+  }
+  .sub-form {
+    width: 90%;
+    margin-inline: auto;
+  }
 }
