--- a/Assets/css/Home.css
+++ b/Assets/css/Home.css
@@ -326,8 +326,8 @@ html {
 .package::before {
   content: "";
   position: absolute;
-  top: 70px; /* Adjust according to padding */
-  right: 50px;
+  top: 60px; /* Adjust according to padding */
+  right: 80px;
   width: 120px;
   height: 400px;
   background: url("../packagrbg.png") no-repeat;
@@ -359,7 +359,7 @@ html {
   display: flex;
   gap: 16px;
   height: 500px;
-  width: 90%;
+  width: 85%;
   margin-inline: auto;
   margin-block: 50px;
 }
@@ -468,15 +468,15 @@ html {
 .experience::before {
   content: "";
   position: absolute;
-  top: 0px; /* Adjust according to padding */
-  left: 50px;
-  width: 120px;
-  height: 150px;
+  top: -50px; /* Adjust according to padding */
+  left: 100px;
+  width: 200px;
+  height: 200px;
   background: url("../expbg.png") no-repeat;
   background-size: contain; /* Ensure image fits the specified dimensions */
   opacity: 0.5; /* Control transparency of the image */
   z-index: 0; /* Place behind the content */
-  transform: rotate(-30deg);
+  transform: rotate(-10deg);
 }
 
 .experience > * {
@@ -484,7 +484,7 @@ html {
   z-index: 1; /* Ensure content is above the image */
 }
 .exp-slider {
-  width: 90%;
+  width: 85%;
   margin-inline: auto;
 }
 .exp-content {
@@ -541,7 +541,7 @@ html {
 }
 
 .card-title {
-  font-size: 18px;
+  font-size: 16px;
   margin: 0;
   padding-top: 5px;
   font-weight: 400;
@@ -550,10 +550,11 @@ html {
 }
 
 .card-sub {
-  font-size: 24px;
+  width: 80%;
+  font-size: 22px;
   margin: 0;
   padding-block: 10px;
-  font-weight: 500;
+  font-weight: 400;
   font-family: "Figtree", sans-serif;
   color: rgba(24, 24, 24, 1);
 }
@@ -569,7 +570,7 @@ html {
   border: 1px solid rgba(0, 0, 0, 0.15);
 
   padding: 5px 10px;
-  font-size: 16px;
+  font-size: 14px;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -584,8 +585,8 @@ html {
 }
 
 .price {
-  font-size: 22px;
-  font-weight: 500;
+  font-size: 18px;
+  font-weight: 400;
   font-family: "Figtree", sans-serif;
   color: rgba(24, 24, 24, 1);
   padding-block: 10px;
@@ -685,14 +686,12 @@ html {
 .int-package::before {
   content: "";
   position: absolute;
-  top: -50px; /* Adjust according to padding */
-  left: 50px;
+  top: -20px;
+  left: 25px;
   width: 400px;
-  height: 300px;
+  height: 400px;
   background: url("../discoverbg.png") no-repeat;
-  background-size: contain; /* Ensure image fits the specified dimensions */
-  opacity: 0.8; /* Control transparency of the image */
-  z-index: 0; /* Place behind the content */
+  background-size: contain;
 }
 
 .int-package > * {
@@ -701,7 +700,7 @@ html {
 }
 
 .int-content {
-  width: 82%;
+  width: 76%;
   margin-inline: auto;
   margin-top: 100px;
   margin-bottom: 20px;
@@ -752,7 +751,7 @@ html {
   display: block;
   width: 100%;
 
-  height: 400px;
+  height: 450px;
 
   object-fit: cover;
 }
@@ -834,7 +833,7 @@ html {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 30px 80px;
+  padding: 30px 30px 30px 80px;
   margin-block: 50px;
   overflow: hidden; /* Prevent pseudo-element overflow */
 }
@@ -970,8 +969,8 @@ html {
 .effort-container::before {
   content: "";
   position: absolute;
-  top: 45%; /* Adjust according to padding */
-  left: 10px;
+  top: 50%; /* Adjust according to padding */
+  left: 40px;
   width: 200px;
   height: 200px;
   background: url("../effortbg1.png") no-repeat;
@@ -1021,7 +1020,7 @@ html {
 }
 
 .effort-card {
-  width: 70%;
+  width: 65%;
   margin-inline: auto;
   background-color: white;
   border-radius: 15px;
@@ -1031,12 +1030,13 @@ html {
   gap: 30px;
   padding: 20px;
   position: relative;
+  margin-block: 5px;
 }
 
 .effort-card .effortcard-img {
   width: 100%;
   object-fit: cover;
-  height: 400px;
+  height: 370px;
   border-radius: 10px; /* Ensure rounded corners */
   display: block; /* Prevent extra spacing below images caused by inline display */
 }
@@ -1068,7 +1068,7 @@ html {
   font-size: 18px;
   font-family: "Figtree", sans-serif;
   margin-block: 20px;
-  font-weight: 500;
+  font-weight: 400;
 }
 
 /* sts2 */
@@ -1080,7 +1080,7 @@ html {
     226,
     0.9
   ); /* Base background color with transparency */
-  width: 90%;
+  width: 85%;
   margin-inline: auto;
   border-radius: 15px;
   height: 250px;
@@ -1136,7 +1136,7 @@ html {
 /* blogs */
 
 .blog-slider {
-  width: 90%;
+  width: 85%;
   margin-inline: auto;
   padding-bottom: 30px;
 }
@@ -1182,7 +1182,7 @@ html {
 
 .blog-auther {
   font-size: 20px;
-  font-weight: 500;
+  font-weight: 400;
   font-family: "Figtree", sans-serif;
   color: rgba(24, 24, 24, 1);
 }
@@ -1190,7 +1190,7 @@ html {
 .blog-des {
   width: 60%;
   font-size: 26px;
-  font-weight: 500;
+  font-weight: 400;
   font-family: "Playfair", serif;
   color: rgba(24, 24, 24, 1);
   margin: 0;
@@ -1204,6 +1204,9 @@ html {
   padding: 10px 0px 15px 0px;
   text-decoration: underline;
   font-size: 16px;
+  font-weight: 400;
+  font-family: "Figtree", sans-serif;
+  color: rgba(24, 24, 24, 1);
   cursor: pointer;
 }
 
@@ -1242,7 +1245,7 @@ html {
 .sub-form {
   display: flex;
   margin-block: 30px;
-  width: 40%;
+  width: 34%;
   margin-inline: auto;
 }
 
@@ -1265,7 +1268,7 @@ html {
   display: flex;
   align-items: center;
   gap: 5px;
-  padding: 6px 12px;
+  padding: 6px 22px;
   height: 54px;
   color: white;
   font-size: 18px;
@@ -1279,12 +1282,19 @@ html {
 /* footer */
 
 .footer-content {
-  width: 90%;
+  width: 85%;
   margin-inline: auto;
   display: grid;
   gap: 20px;
   padding: 20px;
+  margin-block: 20px;
+  justify-items: center;
 }
+
+.footer-content .first-column {
+  justify-self: start;
+}
+
 
 .footer-column h3 {
   margin-bottom: 10px;
@@ -1300,7 +1310,7 @@ html {
 }
 
 .footer-column ul li {
-  margin-bottom: 5px;
+  margin-bottom: 10px;
 }
 
 .footer-column ul li a {
@@ -1308,7 +1318,7 @@ html {
   color: rgba(23, 25, 31, 1);
   font-family: "Figtree", sans-serif;
   font-size: 18px;
-  font-weight: 500;
+  font-weight: 400;
 }
 
 .footer-column ul li a:hover {
@@ -1320,7 +1330,7 @@ html {
 }
 
 .footer-btm-content {
-  width: 90%;
+  width: 85%;
   margin-inline: auto;
   display: flex;
   justify-content: space-between;
@@ -1339,18 +1349,25 @@ html {
   align-items: start;
   gap: 20px;
   margin-block: 30px;
+   
 }
 
 .contact-email {
   display: flex;
   align-items: center;
   gap: 20px;
+   
 }
 
 .contact-email a {
   margin: 0;
   text-decoration: none;
+  font-size: 18px;
+  font-family: "Figtree", sans-serif;
+  text-decoration: none;
   color: rgba(23, 25, 31, 1);
+  font-weight: 400;
+
 }
 
 .contact-phone a {
@@ -1360,12 +1377,13 @@ html {
   font-family: "Figtree", sans-serif;
   text-decoration: none;
   color: rgba(23, 25, 31, 1);
+  font-weight: 400;
 }
 
 .footer-address {
   font-family: "Figtree", sans-serif;
   font-size: 18px;
-  font-weight: 500;
+  font-weight: 400;
   line-height: 30px;
   color: rgba(23, 25, 31, 1);
 }
@@ -1441,7 +1459,7 @@ html {
 }
 
 .int-sliders .slick-slide {
-  margin: 0 6px;
+  margin: 0 10px;
 }
 .int-sliders .slick-list {
   margin: 0 -6px;
@@ -1645,7 +1663,16 @@ html {
     font-size: 50px;
   }
 
+  .package::before {
+    
+    top: 30px;
+    right: 15px;
+    
+}
+
+
   .package-imgs {
+    width: 90%;
     height: 1000px;
     flex-direction: column;
   }
@@ -1655,7 +1682,15 @@ html {
   }
 
   .experience::before {
-    left: 10px;
+    top: -20px;
+    left: -5px;
+    width: 150px;
+    height: 150px;
+  }
+
+  .exp-slider {
+    width: 90%;
+     
   }
   .exp-content {
     margin-top: 80px;
@@ -1677,11 +1712,12 @@ html {
     align-items: center;
   }
   .int-content {
+    width: 82%;
     margin-bottom: 0px;
     margin-top: 80px;
   }
   .int-package::before {
-    left: 10px;
+    left: 0px;
     width: 250px;
     height: 250px;
   }
@@ -1707,6 +1743,12 @@ html {
     flex-direction: column;
   }
 
+
+  .monk-card::before {
+   
+    top: -200px;
+    
+}
   .monk-card .card-left {
     text-align: center;
   }
@@ -1747,12 +1789,14 @@ html {
   }
 
   .effort-card .effortcard-img {
-    height: 350px;
+    height: 340px;
   }
-
+  .effort-card-content h4 {
+    margin-top: 0px;
+  }
   .sts2-container {
     height: 300px;
-
+width: 90%;
     padding-block: 30px;
   }
 
@@ -1760,6 +1804,10 @@ html {
     flex-direction: column;
     gap: 10px;
     justify-content: space-around;
+  }
+
+  .blog-slider {
+    width: 90%;
   }
 
   .blog-title {
@@ -1777,5 +1825,14 @@ html {
   .sub-form {
     width: 90%;
     margin-inline: auto;
+  }
+
+  .sub-form button{
+    padding: 6px 16px;
+  }
+
+  .footer-content {
+    width: 90%;
+    justify-items: start;
   }
 }
