--- a/Assets/css/Home.css
+++ b/Assets/css/Home.css
@@ -570,7 +570,7 @@ html {
   border: 1px solid rgba(0, 0, 0, 0.15);
 
   padding: 5px 10px;
-  font-size: 14px;
+  font-size: 12px;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -1185,10 +1185,12 @@ html {
   font-weight: 400;
   font-family: "Figtree", sans-serif;
   color: rgba(24, 24, 24, 1);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .blog-des {
-  width: 60%;
   font-size: 26px;
   font-weight: 400;
   font-family: "Playfair", serif;
@@ -1295,7 +1297,6 @@ html {
   justify-self: start;
 }
 
-
 .footer-column h3 {
   margin-bottom: 10px;
   font-family: "Figtree", sans-serif;
@@ -1349,14 +1350,12 @@ html {
   align-items: start;
   gap: 20px;
   margin-block: 30px;
-   
 }
 
 .contact-email {
   display: flex;
   align-items: center;
   gap: 20px;
-   
 }
 
 .contact-email a {
@@ -1367,7 +1366,6 @@ html {
   text-decoration: none;
   color: rgba(23, 25, 31, 1);
   font-weight: 400;
-
 }
 
 .contact-phone a {
@@ -1603,7 +1601,7 @@ html {
 .blog-Sliders .slick-prev {
   top: -30px;
   bottom: inherit;
-  left: 96%;
+  left: 95%;
   right: inherit;
   background-size: cover;
   background-image: url("../expPrev.png");
@@ -1664,12 +1662,9 @@ html {
   }
 
   .package::before {
-    
     top: 30px;
     right: 15px;
-    
-}
-
+  }
 
   .package-imgs {
     width: 90%;
@@ -1690,7 +1685,6 @@ html {
 
   .exp-slider {
     width: 90%;
-     
   }
   .exp-content {
     margin-top: 80px;
@@ -1743,12 +1737,9 @@ html {
     flex-direction: column;
   }
 
-
   .monk-card::before {
-   
     top: -200px;
-    
-}
+  }
   .monk-card .card-left {
     text-align: center;
   }
@@ -1796,7 +1787,7 @@ html {
   }
   .sts2-container {
     height: 300px;
-width: 90%;
+    width: 90%;
     padding-block: 30px;
   }
 
@@ -1827,12 +1818,23 @@ width: 90%;
     margin-inline: auto;
   }
 
-  .sub-form button{
+  .sub-form button {
     padding: 6px 16px;
   }
 
   .footer-content {
     width: 90%;
     justify-items: start;
+  }
+}
+
+@media (min-width: 1300px) and (max-width: 1400px) {
+  .blog-Sliders .slick-prev {
+    left: 94%;
+  }
+  .blog-auther {
+    flex-direction: column;
+    align-items: start;
+    gap: 10px;
   }
 }
