--- a/Assets/css/Home.css
+++ b/Assets/css/Home.css
@@ -53,8 +53,8 @@ html {
 .drawer {
   position: fixed;
   top: 0;
-  right: -300px;
-  width: 300px;
+  right: -350px;
+  width: 350px;
   height: 100%;
   background: white;
   box-shadow: -2px 0 5px rgba(0, 0, 0, 0.5);
@@ -263,7 +263,7 @@ html {
   height: 100%;
   background: url("../storybg.png") no-repeat;
   background-size: contain; /* Ensure image fits the specified dimensions */
-  opacity: 0.7; /* Adjust this value for the desired transparency */
+  opacity: 0.5; /* Adjust this value for the desired transparency */
   z-index: -1; /* Ensure the overlay is behind the content */
 }
 
@@ -332,7 +332,7 @@ html {
   height: 400px;
   background: url("../packagrbg.png") no-repeat;
   background-size: contain; /* Ensure image fits the specified dimensions */
-  opacity: 0.5; /* Control transparency of the image */
+  opacity: 0.2; /* Control transparency of the image */
   z-index: 0; /* Place behind the content */
 }
 
@@ -474,7 +474,7 @@ html {
   height: 200px;
   background: url("../expbg.png") no-repeat;
   background-size: contain; /* Ensure image fits the specified dimensions */
-  opacity: 0.5; /* Control transparency of the image */
+  opacity: 0.2; /* Control transparency of the image */
   z-index: 0; /* Place behind the content */
   transform: rotate(-10deg);
 }
@@ -686,10 +686,10 @@ html {
 .int-package::before {
   content: "";
   position: absolute;
-  top: -20px;
-  left: 25px;
-  width: 400px;
-  height: 400px;
+  top: -30px;
+  left: 0px;
+  width: 450px;
+  height: 450px;
   background: url("../discoverbg.png") no-repeat;
   background-size: contain;
 }
@@ -803,13 +803,13 @@ html {
 .tree-monks::before {
   content: "";
   position: absolute;
-  top: -150px; /* Adjust according to padding */
-  right: 50px;
+  top: -100px; /* Adjust according to padding */
+  right: 0px;
   width: 400px;
   height: 300px;
   background: url("../monkbg.png") no-repeat;
   background-size: contain; /* Ensure image fits the specified dimensions */
-  opacity: 0.6; /* Control transparency of the image */
+  opacity: 0.5; /* Control transparency of the image */
   z-index: 0; /* Place behind the content */
 }
 
@@ -995,7 +995,7 @@ html {
   right: 5%;
   width: 300px;
   z-index: 1;
-  opacity: 0.7;
+  opacity: 0.5;
 }
 
 .effort-content .effortbg-img {
@@ -1005,7 +1005,7 @@ html {
   width: 200px;
   height: 200px;
   z-index: 1;
-  opacity: 0.7;
+  opacity: 0.5;
 }
 
 .effort-title {
@@ -1058,6 +1058,7 @@ html {
   right: 0;
   width: 130px;
   height: 130px;
+  border-top-right-radius: 13px;
 }
 
 .effort-card-content {
@@ -1109,7 +1110,7 @@ html {
   height: 100%;
   background: url("../stsbg2.png") no-repeat center;
   background-size: contain; /* Ensure the image fits the dimensions */
-  opacity: 0.8; /* Adjust for the desired transparency */
+  opacity: 0.6; /* Adjust for the desired transparency */
   z-index: -1; /* Place the image behind the content */
   border-radius: 15px; /* Match the container's border radius */
 }
@@ -1576,6 +1577,24 @@ html {
 }
 
 @media only screen and (max-width: 490px) {
+
+
+/* Drawer Styles */
+.drawer {
+  position: fixed;
+  top: 0;
+  right: -300px;
+  width: 300px;
+  height: 100%;
+  background: white;
+  box-shadow: -2px 0 5px rgba(0, 0, 0, 0.5);
+  transition: right 0.3s ease-in-out;
+  display: flex;
+  flex-direction: column;
+  z-index: 1001;
+}
+
+
   .blog-Sliders .slick-prev {
     left: 85%;
   }
