--- a/Assets/css/Home.css
+++ b/Assets/css/Home.css
@@ -1,4 +1,12 @@
 /* General Styles */
+
+@font-face {
+  font-family: "Semplicita Pro";
+  src: url("./SemplicitaPro.otf") format("opentype");
+  font-weight: normal;
+  font-style: normal;
+}
+
 body,
 html {
   margin: 0;
@@ -789,9 +797,6 @@ html {
   transition: transform 0.3s ease, background-color 0.3s ease,
     box-shadow 0.3s ease, opacity 0.3s ease; /* Smooth transition for all effects */
 }
- 
-
-
 
 .int-card p {
   font-size: 22px;
@@ -835,11 +840,6 @@ html {
   opacity: 0;
 }
 
-
-
-
-
-
 /* Desktop Hover Styles */
 @media (min-width: 768px) {
   .int-card:hover {
@@ -852,7 +852,7 @@ html {
     transform: scale(1.01); /* Slightly scales up the card */
     box-shadow: 0px 0px 5px 5px rgba(116, 129, 179, 0.17); /* Adds a subtle shadow */
   }
-  
+
   .int-card:hover .int-overlay-text {
     opacity: 1;
   }
@@ -870,12 +870,11 @@ html {
     transform: scale(1.01); /* Slightly scales up the card */
     box-shadow: 0px 0px 5px 5px rgba(116, 129, 179, 0.17); /* Adds a subtle shadow */
   }
-  
-  .int-card  .int-overlay-text {
+
+  .int-card .int-overlay-text {
     opacity: 1;
   }
 }
-
 
 .int-card a {
   text-decoration: none;
@@ -928,8 +927,7 @@ html {
   border-radius: 20px;
   display: flex;
   justify-content: space-between;
-  align-items: center;
-  padding: 30px 30px 30px 80px;
+
   margin-block: 50px;
   overflow: hidden; /* Prevent pseudo-element overflow */
 }
@@ -937,41 +935,74 @@ html {
 .monk-card::before {
   content: "";
   position: absolute;
-  top: 0;
-  left: 0;
+  top: 35%;
+  left: 25%;
   width: 100%;
   height: 100%;
-  background-image: url("../monkbg2.png");
+  background-image: url("../ring.png");
   background-repeat: no-repeat;
   background-position: left;
-  background-size: 400px;
-  opacity: 0.5; /* Adjust for the desired transparency */
+  background-size: 300px;
+  opacity: 1; /* Adjust for the desired transparency */
   z-index: 0; /* Place it behind the content */
   border-radius: 20px; /* Match the card's border radius */
 }
 
+.monk-card .monk-card-logo {
+  position: absolute;
+  width: 100px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
 .monk-card .card-left {
   text-align: left;
+  width: 50%;
+  background-color: #506e30;
+  padding: 50px 80px;
+  box-sizing: border-box;
+  color: #ffffff;
 }
 
 .monk-card .card-left h3 {
   font-size: 40px;
-  font-family: "Playfair", serif;
+  margin-block: 20px;
+  font-family: "Semplicita Pro", Arial, sans-serif;
+  font-weight: 600;
 }
 .monk-card .card-left img {
   width: 70px;
   left: 70px;
 }
+.card-left .card-left-intro {
+  font-family: "Semplicita Pro", Arial, sans-serif;
+  font-size: 20px;
+}
 
+.card-left .card-left-desc {
+  font-family: "Semplicita Pro", Arial, sans-serif;
+  font-size: 18px;
+  margin-bottom: 30px;
+}
 .monk-card .card-left a {
   width: 70px;
   left: 70px;
   text-decoration: none;
-  color: rgba(24, 24, 24, 1);
-  border-bottom: 1px solid rgba(24, 24, 24, 1);
-  padding-bottom: 5px;
+  color: #ffffff;
+  font-family: "Semplicita Pro", Arial, sans-serif;
+  padding-block: 25px;
+  margin-top: 20px;
+  font-weight: 600;
 }
 
+.monk-card .monk-right {
+  width: 50%;
+  display: flex;
+  justify-content: end;
+  padding: 25px;
+  background-color: #f15b26;
+  box-sizing: border-box;
+}
 .gallery-container {
   display: flex;
   height: 400px;
@@ -1156,8 +1187,8 @@ html {
   height: 130px;
   border-top-right-radius: 13px;
 }
-.effort-img-container{
-width: 35%;
+.effort-img-container {
+  width: 35%;
 }
 .effort-card-content {
   padding: 20px;
@@ -1828,7 +1859,7 @@ width: 35%;
   }
 
   .monk-card {
-    padding: 30px 20px;
+    padding: 0px;
     flex-direction: column;
   }
 
@@ -1837,8 +1868,12 @@ width: 35%;
   }
   .monk-card .card-left {
     text-align: center;
+    width: 100%;
+    padding-inline: 30px;
   }
-
+  .monk-card .monk-right {
+    width: 100%;
+  }
   .gallery-container {
     margin-top: 50px;
     width: 80vw;
@@ -1871,10 +1906,10 @@ width: 35%;
     width: 100%;
   }
 
-  .effort-img-container{
+  .effort-img-container {
     width: 100%;
-    }
-    
+  }
+
   /* .effort-container::before {
     top: 50px;
   } */
